Remaining secret stuff

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -43,3 +43,11 @@
             labels="cityLabels"></canvas>
 </div>
 
+<div class="row" >
+    <h1>Weekly Visits</h1>
+    <canvas height="100px" id="line" class="chart chart-line" data="weeklyCounts"
+            labels="weeklyLabels" legend="true" series="weeklySeries"
+            click="onClick">
+    </canvas>
+</div>
+
